# pingme-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  google_services.json.example  pyproject.toml  requirements-dev.txt
.github/workflows/: cd.yaml  ci.yaml  hello.yml
alembic/: env.py
alembic/versions/: 20260521_0001_initial_schema.py  20260522_0002_email_auth_codes.py  20260522_0003_auth_sessions_and_code_attempts.py  20260522_0004_reminders.py  20260522_0005_form_reminder_settings.py  20260522_0006_product_ready_forms_reminders.py  20260527_0007_form_groups.py
app/: main.py  security.py  sockets.py
app/api/: dependencies.py  rate_limit.py
app/api/v1/endpoints/: admin.py  answers.py  auth.py  form_groups.py  forms.py  reminders.py  study_tracking_router.py
app/core/: config.py  observability.py  security.py
app/models/: user_model.py
app/routers/: answers.py  auth.py  forms.py  study_tracking.py  study_tracking_router.py
app/schemas/: admin_schemas.py  auth_schemas.py  form_group_schemas.py  form_schemas.py  password_schemas.py  reminder_schemas.py  socket_schemas.py  study_schemas.py  user_schemas.py
app/services/: answer_service.py  auth_service.py  email_service.py  form_group_service.py  form_service.py  health_service.py  reminder_queue.py  reminder_scheduler.py  reminder_service.py  reminder_worker.py  study_tracking.py  tracking_service.py
db/: database.py
docs/: API_CONTRACT.md  frontend-types.md  openapi.json
scripts/: export_openapi.py  start_api.sh
test_frontend/: app.js  index.html  styles.css
tests/: conftest.py  test_admin_health.py  test_auth.py  test_config.py  test_core_security_tokens.py  test_form_groups.py  test_reminders.py  test_security.py  test_tracking_service.py
